tests/should_fail/bug/400.stderr
error: Expected `la` to be a `#[law]` as specified by the trait declaration
  --> 400.rs:14:5
   |
14 |     fn la() {}
   |     ^^^^^^^

error: Method `lo` should not be a `#[law]`, as specified by the trait declaration
  --> 400.rs:17:5
   |
17 |     fn lo() {}
   |     ^^^^^^^

error: aborting due to 2 previous errors

